adiçao do target nos links dos subprojetos

--- a/bootstrap/Portifólio/index.html
+++ b/bootstrap/Portifólio/index.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="card col-12 col-sm-6 m-3" style="width: 18rem;">
-                    <a href="https://samuelnunesdev.github.io/bootstrap-jquery/jquery/galeria%20de%20imagens/">
+                    <a href="https://samuelnunesdev.github.io/bootstrap-jquery/jquery/galeria%20de%20imagens/" target="_blank">
                         <img class="card-img-top" src="images/galeria_de_imagens.png" alt="Card image cap">
                     </a>
                     <div class="card-body">
@@ -78,7 +78,7 @@
                 </article>
                 <article class="row px-5 border-bottom pb-3">
                 <div class="card col-12 col-sm-6 m-3" style="width: 18rem;">
-                    <a href="https://samuelnunesdev.github.io/bootstrap-jquery/jquery/lista%20de%20tarefas/">
+                    <a href="https://samuelnunesdev.github.io/bootstrap-jquery/jquery/lista%20de%20tarefas/" target="_blank">
                         <img class="card-img-top" src="images/lista_de_tarefas.png" alt="Card image cap">
                     </a>
                     <div class="card-body">
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="card col-12 col-sm-6 m-3" style="width: 18rem;">
-                    <a href="https://samuelnunesdev.github.io/bootstrap-jquery/jquery/Site%20Bootstrap-Jquery/">
+                    <a href="https://samuelnunesdev.github.io/bootstrap-jquery/jquery/Site%20Bootstrap-Jquery/" target="_blank">
                         <img class="card-img-top" src="images/site_jquery.png" alt="Card image cap">
                     </a>
                     <div class="card-body">
